--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -69,6 +69,9 @@
             },
             HistoryGoBack: function () {
                 window.history.go(-1);
+            },
+            GetElementContents: function (el) {
+                return el.innerHTML;
             }
         }
     </script>
