--- a/Pages/StandardHeaderOne.razor
+++ b/Pages/StandardHeaderOne.razor
@@ -26,6 +26,23 @@
         position: relative;
         background: linear-gradient(to left, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
     }
+
+    @@media(max-width: 920px) {
+        #h-one-container {
+            width: 100%;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        #child-content {
+            text-align: center;
+
+        }
+
+        .underline {
+            display: none;
+        }
+    }
 </style>
 
 <div id="h-one-container">
