--- a/Pages/TutorialVideoPage.razor
+++ b/Pages/TutorialVideoPage.razor
@@ -1,5 +1,6 @@
 @page "/tutorial_video"
 @page "/tutorial_video/{title}/{url}"
+
 @using System.Text.Encodings.Web
 @inject IStringLocalizer<App> localizer
 @inject IJSRuntime JSRuntime
@@ -86,8 +87,8 @@
             <li>@localizer["TVP_Instruction_Steps_UL1"]</li>
             <li>@localizer["TVP_Instruction_Steps_UL2"]</li>
         </ol>
-        <button id="tvp-test-btn" type="button" class="btn btn-primary" @onclick="GoToTest"
-            disabled>@localizer["TVP_Test_Button"]</button>
+        <button id="tvp-test-btn" type="button" class="btn btn-primary"
+            @onclick="GoToTest">@localizer["TVP_Test_Button"]</button>
     </div>
 </div>
 
