--- a/Pages/TestForm.razor
+++ b/Pages/TestForm.razor
@@ -311,15 +311,13 @@
         msg.From = new MailAddress(email);
         msg.To.Add(email);
         msg.To.Add(onboard_email);
-        msg.Subject = GetMessageSubject();
         msg.IsBodyHtml = true;
+        msg.Subject = GetMessageSubject();
         msg.Body = GetMessageBody();
-
-        var creds = new System.Net.NetworkCredential();
-        creds.UserName = email;
-        creds.Password = @"Rm@n2021*!";
+        var creds = new System.Net.NetworkCredential(email, "Rm@n2021*!");
 
         SmtpClient client = new SmtpClient("smtp.office365.com", 587);
+        client.DeliveryMethod = SmtpDeliveryMethod.Network;
         client.UseDefaultCredentials = false;
         client.Credentials = creds;
         client.EnableSsl = true;
@@ -330,6 +328,7 @@
     private string GetMessageSubject()
     {
         var subject = "";
+
         if (string.IsNullOrWhiteSpace(Entry.FullName))
         {
             subject += "An Employee ";
@@ -338,6 +337,7 @@
         {
             subject += Entry.FullName + " ";
         }
+
         subject += "has completed the " + Title + " Test";
         return subject;
     }
