--- a/Pages/TutorialVideoPage.razor
+++ b/Pages/TutorialVideoPage.razor
@@ -87,8 +87,8 @@
             <li>@localizer["TVP_Instruction_Steps_UL1"]</li>
             <li>@localizer["TVP_Instruction_Steps_UL2"]</li>
         </ol>
-        <button id="tvp-test-btn" type="button" class="btn btn-primary"
-            @onclick="GoToTest">@localizer["TVP_Test_Button"]</button>
+        <button id="tvp-test-btn" type="button" class="btn btn-primary" @onclick="GoToTest"
+            disabled>@localizer["TVP_Test_Button"]</button>
     </div>
 </div>
 
