--- a/Pages/TestForm.razor
+++ b/Pages/TestForm.razor
@@ -212,6 +212,7 @@
     private string UniqueCode { get; set; }
     private ElementReference formRef { get; set; }
     private ElementReference confirmationRef { get; set; }
+    private SMTPLoginCredentials Credentials { get; set; }
 
     protected override void OnParametersSet()
     {
@@ -228,6 +229,8 @@
         {
             Questions = formDataService.Entry.Spanish.Questions;
         }
+
+        Credentials = SMTPLoginCredentials.LoadCredsFromJson();
     }
 
     private async void GoToVideo()
@@ -304,7 +307,7 @@
 
     private void SendEmail()
     {
-        var email = "safetytests@marathonelectrical.com";
+        var email = Credentials.Email;
         var onboard_email = "safetyonboarding@marathonelectrical.com";
 
         MailMessage msg = new MailMessage();
@@ -314,7 +317,7 @@
         msg.IsBodyHtml = true;
         msg.Subject = GetMessageSubject();
         msg.Body = GetMessageBody();
-        var creds = new System.Net.NetworkCredential(email, "Rm@n2021*!");
+        var creds = new System.Net.NetworkCredential(email, Credentials.Password);
 
         SmtpClient client = new SmtpClient("smtp.office365.com", 587);
         client.DeliveryMethod = SmtpDeliveryMethod.Network;
