rebranding and verbage improvements

--- a/Pages/TestForm.razor
+++ b/Pages/TestForm.razor
@@ -30,14 +30,14 @@
 
     #tf-submit-btn {
         background-color: transparent;
-        border: 1px solid orangered;
-        color: orangered;
+        border: 1px solid #eb1e23;
+        color: #eb1e23;
         margin-top: 25px;
         margin-bottom: 25px;
     }
 
     #tf-submit-btn:hover {
-        background-color: orangered;
+        background-color: #eb1e23;
         color: ghostwhite;
     }
 
@@ -68,7 +68,7 @@
         color: ghostwhite;
         background-color: rgb(24, 24, 24);
         border-radius: 20px;
-        border: 1px solid orangered;
+        border: 1px solid #eb1e23;
         margin-left: auto;
         margin-right: auto;
         width: 50%;
@@ -82,25 +82,25 @@
 
     #tf-rewatch-vid-btn {
         background-color: transparent;
-        border: 1px solid orangered;
-        color: orangered;
+        border: 1px solid #eb1e23;
+        color: #eb1e23;
         margin-top: 25px;
     }
 
     #tf-rewatch-vid-btn:hover {
-        background-color: orangered;
+        background-color: #eb1e23;
         color: ghostwhite;
     }
 
     #tf-video-list-btn {
         background-color: transparent;
-        border: 1px solid orangered;
-        color: orangered;
+        border: 1px solid #eb1e23;
+        color: #eb1e23;
         margin-top: 25px;
     }
 
     #tf-video-list-btn:hover {
-        background-color: orangered;
+        background-color: #eb1e23;
         color: ghostwhite;
     }
 
