--- a/Shared/ChooseLanguage.razor
+++ b/Shared/ChooseLanguage.razor
@@ -20,18 +20,19 @@
     }
 
     #select-language-form {
-        float: right;
+        float: left;
     }
 
     #cl-submit-btn {
         background-color: transparent;
-        border: 1px solid orangered;
+        border: 1px solid #eb1e23;
         border-radius: 10px;
-        color: orangered;
+        color: #eb1e23;
+        float: right;
     }
 
     #cl-submit-btn:hover {
-        background-color: orangered;
+        background-color: #eb1e23;
         color: ghostwhite;
     }
 
@@ -40,6 +41,7 @@
             float: none;
             margin: 0;
             padding: 0;
+            align-self: center;
         }
 
         #language-selection-container {
